--- a/pages/index.html
+++ b/pages/index.html
@@ -128,7 +128,7 @@
         <h3 style="text-align:center" class="daily-routine-header">Feedback Form
         </h3>
         <div style="text-align:center">
-        <form method="post" action="/sendform" onsubmit=" return formSubmit()">
+        <form action="/addForm" method="POST" onsubmit=" return formSubmit()">
         	<label>Name</label><br>
         <input type="text" placeholder="Name" id="name" name="name" maxlength="50"><br>
         	<label>Phone</label><br>
